--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -126,7 +126,7 @@
 			width: 3em;
 			display: inline-block;
 		}
-		.time-hoverer:hover .time{
+		.message:hover .time{
 			opacity: 1;
 			visibility: visible;
 		}
