--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -1,4 +1,5 @@
 <template name="welcome">
+	{{loginButtons}}
 	<section class="welcome-mast">
 		<div class="welcome-mast-cont">
 			<h1 style='font-size: 3.5em;'>OpenTalk</h1>
