--- a/client/views/room.html
+++ b/client/views/room.html
@@ -75,8 +75,8 @@
 
 	{{#isolate}}
 	<audio id="new_message" preload="auto">
-		<source id='notifmp3' src='{{#unless kittenSoundEnabled}}/audio/notif.mp3{{else}}/audio/kitten.mp3{{/unless}}'/>
-		<source id='notifogg' src='{{#unless kittenSoundEnabled}}/audio/notif.ogg{{else}}/audio/kitten.ogg{{/unless}}'/>
+		<source id='notifmp3' src='/audio/notif.mp3'/>
+		<source id='notifogg' src='/audio/notif.ogg'/>
 	</audio>
 	{{/isolate}}
 </template>
