--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -13,6 +13,11 @@
 	-webkit-box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
 
 	background: white;
+
+	@media all and (max-width:$limit){
+		margin-left:$toggle-size;
+		width: auto;
+	}
 }
 	.message{
 		padding: .2em 0.7em;
