--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -17,15 +17,18 @@
  //    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(255, 255, 255, 1)', endColorstr='rgba(255, 255, 255, 0)', GradientType=1);
 	
 	background:white;
+	overflow-x:hidden;
 }
 
 .mini-header-wrapper{
 	background:$color-main;
 	height:50%;
+	overflow-x:hidden;
 }
 .mini-header{
 	height: 100%;
 	background:url('/images/pattern-white-high-res.png');
+	overflow-x:hidden;
 }
 	
 
@@ -94,6 +97,10 @@
 		
 		// box-shadow:  1em 0 1em lightgrey;
 		box-shadow: none;
+		
+		@media all and (max-width: 450px){
+			width: 100%;
+		}
 	}
 	
 	&:hover{
@@ -238,8 +245,8 @@ $ou-width: 10em;
 		border-top-right-radius: 10px;
 		border-top-left-radius: 10px;
 		width: $ou-width;
-		margin:auto;
-		display: inline-block;
+		display: block;
+		width: 100%;
 	}
 	.online-user{
 		font-size: .9em;
@@ -249,7 +256,6 @@ $ou-width: 10em;
 	    color:#555;
 		margin-left:.5em!important;
 	    
-
 	    &.strike{
 	    	text-decoration: line-through;
 	    	opacity: .3;
@@ -258,11 +264,10 @@ $ou-width: 10em;
 	}
 	
 	.micro-avatar{
-		height: 1em;
-		width: 1em;
+		height: 1.1em;
+		width: 1.1em;
 		display: inline-block;
 		background-size: 100% !important;
-
 		border-radius: 50%;
 	}
 
