--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -6,7 +6,7 @@
 	</ul>
 	<br>
 	<br>
-	<table class='admin-table' style="width: 40%;float: left;">
+	<table class='admin-table' style="width: 40%;float: left;border-right:5px solid black;">
 	{{#each messages}}
 		<tr>
 			<td>{{username}}</td> <td>{{roomid}}</td><td>{{text}}</td>
