--- a/client/sass/_vars.scss
+++ b/client/sass/_vars.scss
@@ -9,22 +9,12 @@ $blanket-width:22em;
 
 $mobile-view: $limit + $sidebar-width  + 2em;
 
-$color-main:lighten(#2980b9,10%);
-
-$color-main:#E96B56;//red-rosa
-$color-main:#EB8A48;//orange-brown
-$color-main:#FF7200;//orange
-$color-main:#E4582A;//red
-$color-main:#59A029;//dark green
-$color-main:#6EC633;//green
-$color-main:#F78F1E;//orange
 $color-main:#FFCC33;//yellow
 $color-main:#FFBB00;//yellow
+$color-main:#FFD100;//yellow
 
 
-$color-subtle: #FBFBFB;
-
-
+$color-subtle: #F8F8F8;
 
 $color-secondary: #444;
 
