--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -62,42 +62,42 @@
 			<h1 class='tiles-header'>Features</h1>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/realtime.png">
+					<p class="features-sprite realtime-icon"></p>
 					<h6>Chatting</h6>
 					<span>see what other users are typing in realtime</span>
 				</div>
 			</div>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/stats.png">
+					<p class="features-sprite stats-icon"></p>
 					<h6><a href="/profile">Stats</a></h6>
 					<span>if you wonder how many characters you typed</span>
 				</div>
 			</div>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/search.png">
+					<p class="features-sprite search-icon"></p>
 					<h6>Interests</h6>
 					<span>find interesting chatrooms</span>
 				</div>
 			</div>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/unlocked.png">
+					<p class="features-sprite unlocked-icon"></p>
 					<h6>Opensource</h6>
 					<span>Would you like to contribute? <a href="https://github.com/christian-fei/opentalk.me" target='_blank'>Here you go</a></span>
 				</div>
 			</div>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/speech-bubble.png">
+					<p class="features-sprite speech-bubble-icon"></p>
 					<h6><span class="tipstricks-toggle fake-link">Markdown</span></h6>
 					<span>if you're into that thing</span>
 				</div>
 			</div>
 			<div class="tile">
 				<div class="vam">
-					<img src="/images/mail.png">
+					<p class="features-sprite mail-icon"></p>
 					<h6>Notifications</h6>
 					<span>Never miss a message from your chatrooms*</span>
 				</div>
